fix: change wapllpapers

--- a/audio-player-stage0/index.html
+++ b/audio-player-stage0/index.html
@@ -33,6 +33,7 @@
   </div>
   <footer>
     <a href="https://rs.school/js/"><img class="rss-logo" src="assets/icons/rss.svg" alt="RSS"></a>
+    <p class="year">2023</p>
     <a href="https://github.com/Forlocks"><img class="gh-logo"  src="assets/icons/gh.svg" alt="GH"></a>
   </footer>
 </body>
