feat: add volume-button functionality

--- a/audio-player-stage0/index.html
+++ b/audio-player-stage0/index.html
@@ -13,6 +13,7 @@
   <div class="player">
     <img class="player-cover" src="assets/images/img-1.jpg" alt="Cover">
     <div class="player-bottom">
+      <input type="range" id="fader-volume" min="0" max="100" value="50" step="1" oninput="faderVolumeUpdate(value)">
       <div class="player-bottom-one">
         <p id="song-name">TIRED OF PROBLEMS</p>
         <p id="song-author">Nueki, Tolchonov, Glichery</p>
