--- a/image-galery-stage0/index.html
+++ b/image-galery-stage0/index.html
@@ -11,12 +11,25 @@
 </head>
 <body>
 <header>
-
+  <div class="header-left">
+    <img class="favicon" src="assets/icons/logo.png">
+    <h1 class="title">Image Galery</h1>
+  </div>
+  <form class="header-right">
+    <input id="search-input" type="text" placeholder="Search...">
+  </form>
 </header>
 <main>
-
+  <div class="image-box">
+    <img class="image" src="assets/images/kartinka.jpg">
+    <img class="image" src="assets/images/kartinka.jpg">
+    <img class="image" src="assets/images/kartinka.jpg">
+    <img class="image" src="assets/images/kartinka.jpg">
+  </div>
 </main>
 <footer>
-  
+  <img class="rss-logo" src="assets/icons/rss.svg">
+  <p class="year">2023</p>
+  <img class="gh-logo" src="assets/icons/gh.svg">
 </footer>
 </body>
