--- a/image-galery-stage0/index.html
+++ b/image-galery-stage0/index.html
@@ -7,29 +7,34 @@
   <link rel="icon" href="assets/icons/favicon.png">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/adaptive.css">
   <script defer src="script.js"></script>
 </head>
 <body>
-<header>
-  <div class="header-left">
-    <img class="favicon" src="assets/icons/logo.png">
-    <h1 class="title">Image Galery</h1>
-  </div>
-  <form class="header-right">
-    <input id="search-input" type="text" placeholder="Search...">
-  </form>
-</header>
-<main>
-  <div class="image-box">
-    <img class="image" src="assets/images/kartinka.jpg">
-    <img class="image" src="assets/images/kartinka.jpg">
-    <img class="image" src="assets/images/kartinka.jpg">
-    <img class="image" src="assets/images/kartinka.jpg">
-  </div>
-</main>
-<footer>
-  <img class="rss-logo" src="assets/icons/rss.svg">
-  <p class="year">2023</p>
-  <img class="gh-logo" src="assets/icons/gh.svg">
-</footer>
+  <header>
+    <div class="header-left">
+      <img class="favicon" src="assets/icons/logo.png">
+      <h1 class="title">Image Galery</h1>
+    </div>
+    <div class="header-right">
+      <input id="search-input" type="text" placeholder="Search..." autocomplete="off" autofocus>
+      <img id="delete-button" src="assets/icons/cross.png">
+      <img id="search-button" src="assets/icons/loupe.png">
+    </div>
+  </header>
+  <main>
+    <div class="image-box">
+      <img class="image">
+      <img class="image">
+      <img class="image">
+      <img class="image">
+    </div>
+    <img id="error-icon" src="assets/icons/error.png">
+    <p class="error">No data was found for your request or the limit on the number of requests has been exceeded</p>
+  </main>
+  <footer>
+    <a href="https://rs.school/js/"><img class="rss-logo" src="assets/icons/rss.svg"></a>
+    <p class="year">2023</p>
+    <a href="https://github.com/Forlocks"><img class="gh-logo" src="assets/icons/gh.svg"></a>
+  </footer>
 </body>
