feat: add page menu

--- a/random-game-stage0/index.html
+++ b/random-game-stage0/index.html
@@ -7,10 +7,26 @@
   <link rel="icon" href="assets/icons/favicon.png">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
+  <script defer src="scripts/scriptMenu.js"></script>
 </head>
 <body>
-  <div class="case">
+  <div class="container">
+    <div class=page-menu>
+      <p class="menu-title">Apple<br>&nbsp;&nbsp;&nbsp;Hunter</p>
+      <div id="menu-button-play">
+        Play
+      </div>
+      <div id="menu-button-rating">
+        Rating
+      </div>
+      <img id="menu-button-volume" src="assets/icons/volume.png" alt="Volume">
+    </div>
+    <div class="page-game">
 
+    </div>
+    <div class="page-score">
+
+    </div>
   </div>
   <footer>
     <a href="https://rs.school/js/"><img class="rss-logo" src="assets/icons/rss.svg" alt="RSS"></a>
