feat: add basic spawn for apples

--- a/random-game-stage0/index.html
+++ b/random-game-stage0/index.html
@@ -7,7 +7,6 @@
   <link rel="icon" href="assets/icons/favicon.png">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
-  <script defer src="scripts/scriptMenu.js"></script>
 </head>
 <body>
   <div class="container">
@@ -20,9 +19,11 @@
         Rating
       </div>
       <img id="menu-button-volume" src="assets/icons/volume.png" alt="Volume">
+      <script defer src="scripts/scriptMenu.js"></script>
     </div>
     <div class="page-game">
-
+      <canvas width="670" height="670">Use a modern browser</canvas>
+      <script defer src="scripts/scriptGame.js"></script>
     </div>
     <div class="page-score">
 
